# Skin_Cancer_Detection

./: README.md
SkinCancerDetection/: app.db  app.py  config.py  fileOrganization.py  image_processing.py  index.html  main.py  models.py  pyproject.toml  requirements.txt  routes.py  styles.css
SkinCancerDetection/static/: styles.css
SkinCancerDetection/templates/: index.html
